--- a/html/our_projects/descargas.html
+++ b/html/our_projects/descargas.html
@@ -874,9 +874,9 @@
                                             <p>Wallpapers</p>
 
                                             <span>
-                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas1.zip">Gideas HD</a></br> <br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas1.zip">Gideas 1900px</a></br><br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas1.zip">Gideas 1200px</a></br><br><br>
+                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas1.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas HD</a></br> <br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas1.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas1.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas 1200px</a></br><br><br>
                                             </span>
 
                                            
@@ -894,9 +894,9 @@
                                             <p>Wallpapers</p>
 
                                            <span>
-                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas2.zip">Gideas HD</a></br> <br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas2.zip">Gideas 1900px</a></br><br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas2.zip">Gideas 1200px</a></br><br><br>
+                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas2.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas HD</a></br> <br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas2.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas2.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas 1200px</a></br><br><br>
                                             </span>
 
 
@@ -913,9 +913,9 @@
                                             <p>Wallpapers</p>
 
                                             <span>
-                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas3.zip">Gideas HD</a></br> <br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas3.zip">Gideas 1900px</a></br><br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas3.zip">Gideas 1200px</a></br><br><br>
+                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas3.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas HD</a></br> <br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas3.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas3.zip" style="text-decoration: none; font-size:18px;color:#727272;">Gideas 1200px</a></br><br><br>
                                             </span>
 
                                         </div>
@@ -935,9 +935,9 @@
                                             <p>Diseño Web</p>
 
                                            <span>
-                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas4.zip">Gideas HD</a></br> <br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas4.zip">Gideas 1900px</a></br><br><br>
-                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas4.zip">Gideas 1200px</a></br><br><br>
+                                                 <br><br><br><a href="assets/media/store/wallpapers/wallpapers_gideas4.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas HD</a></br> <br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas4.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas 1900px</a></br><br><br>
+                                                    <a href="assets/media/store/wallpapers/wallpapers_gideas4.zip" style="text-decoration: none; font-size:18px; color:#727272;">Gideas 1200px</a></br><br><br>
                                             </span>
 
                                         </div>
