--- a/html/projects/projects2.html
+++ b/html/projects/projects2.html
@@ -1151,7 +1151,7 @@
 
                     <div id="preview-media-image" data-url="assets/media/portfolio/images/image2.jpg" data-title="" data-alt=""></div>
 
-               <div id="video-wrapper" style="opacity: 1; visibility: visible;" data-url="assets/media/our_projects/projects/video/kinder_delice/Sampling_GIDEAS_para_KINDER_D_LICE_MP4_IV_C_3_i_.webm"></div>             
+               <div id="video-wrapper" style="opacity: 1; visibility: visible;" data-url="assets/media/our_projects/projects/video/kinder_delice/Sampling_GIDEAS_para_KINDER_D_LICE_MP4_IV_C_3_i_.webm" width="150"></div>             
 
                     <div id="preview-media-image" data-url="assets/media/portfolio/images/image4.jpg" data-title="" data-alt=""></div>
 
