--- a/index.html
+++ b/index.html
@@ -282,6 +282,15 @@
 
                 </div>     
 
+                   <!--Begin jobs-->
+                 <div class="menu-option-holder" data-module-type="contact" data-side="custom">
+
+                    <div id="menu-option-background" class="menu-option-background"> </div>
+
+                    <div id="menu-option-text" class="menu-option-text"><a href="#jobs.html" data-path-href="html/contact/">JOBS</a></div>
+
+                </div>      
+                <!--Ends jobs-->
                 <div class="menu-option-holder" data-module-type="contact" data-side="custom">
 
                     <div id="menu-option-background" class="menu-option-background"> </div>
