este es un update de Martin a las 6 : 51 pm
Aqui van editados algunos archivos más los estilos

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                <div data-side="none" data-module-type="slideshow" class="menu-option-holder">
                     <div class="menu-option-background" id="menu-option-background"> </div>
                     <div class="menu-option-text" id="menu-option-text">
-                       <a data-path-href="html/our_projects/" href="#whatwedo.html" >What We Do 4 You?</a>
+                       <a data-path-href="html/our_projects/" href="#whatwedo.html" >WHAT WE DO 4 YOU?</a>
                     </div>                
                 </div>
                <!-- Ends WWD4Y -->  
@@ -294,7 +294,7 @@
                 <div class="menu-option-holder" data-module-type="contact" data-side="custom">
 
                     <div id="menu-option-background" class="menu-option-background"> </div>
-
+    
                     <div id="menu-option-text" class="menu-option-text"><a href="#contact.html" data-path-href="html/contact/">CONTACTO</a></div>
 
                 </div>            
@@ -307,23 +307,29 @@
 
                     <option value="#">Ir a...</option>
 
-                    <option value="#home_layout_1.html"> HOME</option>
+                    <option value="#landign"> HOME</option>
 
-                    <option value="#"> POWER OF WOW: </option>
+                    <option value="#philosophy.html"> PHILOSOPHY</option>
 
-                        <option value="#about_us.html">  - The Red Mark</option>
+                    <option value="#whatwedo.html">WHAT WE DO 4 YOU? </option>
 
-                        <option value="#ethics.html">  - ¿Quiénes Somos?</option>
 
-                    <option value="#news.html"> NOTICIAS</option>
+                    <option value="#">STORE </option>
 
-                    <option value="#portfolio.html"> PORTAFOLIO</option>
+                        <option value="#productos.html">  - PRODUCTOS</option>
 
-                    <option value="#3_columns_projects.html"> ¿QUÉ HACEMOS?</option>
+                        <option value="#descargas.html">  - DESCARGAS GRATUITAS</option>
 
-                    <option value="#showreel.html"> SHOWREEL</option>    
+                        <option value="#">  - PRESENTACIÓN DE LA AGENCIA</option>
 
-                    <option value="#image_gallery.html"> TIENDA</option>
+
+                    <option value="#projects2.html"> PROJECTS</option>
+
+                    <option value="#people.html"> PEOPLE</option>
+
+                    <option value="#jobs.html"> JOBS</option>    
+
+                    
 
                     <option value="#contact.html"> CONTACTO</option>
 
