--- a/html/about_us/philosophy.html
+++ b/html/about_us/philosophy.html
@@ -487,12 +487,29 @@
         	<img src="assets/media/philoshopy/Philosopy-Agencia_II-A-1.jpg" onload="animateModuleBackground(this)" class="module-background" id="module-background" alt="" />
 
         </div>	
+        <script>
+            function show(id) {
+                document.getElementById(id).style.visibility = "visible";
+            }
+            function hide(id) {
+                document.getElementById(id).style.visibility = "hidden";
+        }
+</script>
+        <div style="width:60%; position:relative; float:left; margin-left:-85px;"> 
 
-        <div id="cohete1" class="v1"><a title="Te sorprendo porque te ASOMBRO.." class="tooltip"><img src="assets/media/philoshopy/cohete1.png" width="200" /></a></div>    
-        <div id="cohete2" class="v2"><a title="Te sorprendo porque te INTERESO.." class="tooltip2"><img src="assets/media/philoshopy/cohete2.png" width="200"/></a></div>
-        <div id="cohete3" class="v3"><a title="Te sorprendo porque te ATRAPO.." class="tooltip3"><img src="assets/media/philoshopy/cohete3.png" width="200"/></a></div>
-        <div id="cohete3" class="v4"><a title="Te sorprendo porque te ATRAPO.." class="tooltip4"><img src="assets/media/philoshopy/cohete4.png" width="200"/></a></div>
         
+        <div id="flecha1" class="flc1" onmouseover="document.getElementById('cohete1').style.display = 'block';" onmouseout="document.getElementById('cohete1').style.display = 'none';"><img src="assets/media/philoshopy/high_impact.png"></div>
+        <div id="flecha2" class="flc2" onmouseover="document.getElementById('cohete4').style.display = 'block';" onmouseout="document.getElementById('cohete4').style.display = 'none';"><img src="assets/media/philoshopy/high_interaction.png"></div>
+        <div id="flecha3" class="flc3" onmouseover="document.getElementById('cohete3').style.display = 'block';" onmouseout="document.getElementById('cohete3').style.display = 'none';"><img src="assets/media/philoshopy/high_entertainment.png"></div>
+        <div id="flecha4" class="flc4" onmouseover="document.getElementById('cohete2').style.display = 'block';" onmouseout="document.getElementById('cohete2').style.display = 'none';"><img src="assets/media/philoshopy/high_promotion.png"></div>
+        <div id="centro"   class="ctr"><img src="assets/media/philoshopy/lestget_high.png"></div>
+
+
+        <div id="cohete1" class="v1"><img src="assets/media/philoshopy/cohete1.png" width="200" /><p  class="tooltip">Te sorprendo porque te ASOMBRO.</p></div>    
+        <div id="cohete2" class="v2"><img src="assets/media/philoshopy/cohete2.png" width="200"/><p  class="tooltip2">Te sorprendo porque te INTERESO.</p></div>
+        <div id="cohete3" class="v3"><img src="assets/media/philoshopy/cohete3.png" width="200"/><p  class="tooltip4">Te sorprendo porque te ATRAPO.</p></div>
+        <div id="cohete4" class="v4"><img src="assets/media/philoshopy/cohete4.png" width="200"/><p  class="tooltip3">Te sorprendo porque te ATRAPO.</p></div>
+        </div>
 
 
 
