--- a/index.html
+++ b/index.html
@@ -187,6 +187,23 @@
 
                             <div class="sub-menu-option-text"><a href="#p2.html" data-path-href="html/about_us/">HIgh Impact</a></div>
                         </div>
+
+
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#activia.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#danone.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+
+
                         <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
 
                             <div class="sub-menu-option-background"> </div>
