--- a/index.html
+++ b/index.html
@@ -223,6 +223,10 @@
                             <div class="sub-menu-option-text"><a href="#p5.html" data-path-href="html/about_us/">High Entertainment </a></div>
 
                         </div>
+						<div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+                            <div class="sub-menu-option-background"> </div>
+                            <div class="sub-menu-option-text"><a href="#landing.html" data-path-href="html/about_us/">Inicio</a></div>
+                        </div>
                     </div>
 
                 </div>
