Template Video We're Gideas

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 
 <div id="loading-animation">
 
-	<img src="assets/loaders/loader.gif" width="16" height="11" alt="Synergy - loading animation"/>
+	<img src="assets/loaders/loader.gif" width="16" height="11" alt="Gideas"/>
 
 </div>
 
