--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             <div class="sub-menu-option-text"><a href="#p2.html" data-path-href="html/about_us/">HIgh Impact</a></div>
                         </div>
 
-
+<!--Hojas separadas-->
                         <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
 
                             <div class="sub-menu-option-background"> </div>
@@ -202,8 +202,266 @@
 
                             <div class="sub-menu-option-text"><a href="#danone.html" data-path-href="html/our_projects/"></a></div>
                         </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#kinder_delice.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#bonafont.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#gigante.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#flora.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#kinde_chocolate.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#nutella.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#evian.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#nestle.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#danette.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#badoit.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#kimberly-clark.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#purina.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#appleton.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#finlandia.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#antiguo.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#jimador.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#disaronno.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#new_mix.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#jack_daniels.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#herradura.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#gsk.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#kelloggs.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#mtv.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#paseusted.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#microsoft.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#off.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#foloumi.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#televisa.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#tdn.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#amafore.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#baygon.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#fox.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#e.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#yoquiero_yopuedo.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#canacero.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                        <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#panasonic.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                          <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#ambiente.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+
+                         <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#guerrillaB.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                          <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#convencionB.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+
+                         <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#levite.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
+                         <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
+
+                            <div class="sub-menu-option-background"> </div>
+
+                            <div class="sub-menu-option-text"><a href="#promocionB.html" data-path-href="html/our_projects/"></a></div>
+                        </div>
 
 
+
+
+
+
+
+
+
+                        <!--Termina hojas separdas-->
                         <div class="sub-menu-option-holder" data-module-type="text_page" data-side="height" style="display:none;">
 
                             <div class="sub-menu-option-background"> </div>
@@ -291,7 +549,7 @@
 
                     <div id="menu-option-background" class="menu-option-background"> </div>
 
-                    <div id="menu-option-text" class="menu-option-text"><a href="#projects2.html" data-path-href="html/projects/">PROJECTS</a></div>
+                    <div id="menu-option-text" class="menu-option-text"><a href="#projects3.html" data-path-href="html/our_projects/">PROJECTS</a></div>
 
                 </div>         
 
@@ -456,15 +714,15 @@
 
                         <ul>
 
-                            <li class="twitter"><a href="http://www.twitter.com" target="_blank"></a></li>
+                            <li class="twitter"><a href="http://www.twitter.com/@gideasredmark" target="_blank"></a></li>
 
-                            <li class="facebook"><a href="http://www.facebook.com" target="_blank"></a></li>
+                            <li class="facebook"><a href="https://www.facebook.com/theredmarkgideas?ref=ts&fref=ts" target="_blank"></a></li>
 
-                            <li class="google"><a href="http://www.google.com" target="_blank"></a></li>
+                            <!--<li class="google"><a href="http://www.google.com" target="_blank"></a></li>
 
                             <li class="dribbble"><a href="http://www.dribbble.com" target="_blank"></a></li>
 
-                            <li class="flickr"><a href="http://www.flickr.com" target="_blank"></a></li>
+                            <li class="flickr"><a href="http://www.flickr.com" target="_blank"></a></li>-->
 
                         </ul>
 
