--- a/html/about_us/philosophy.html
+++ b/html/about_us/philosophy.html
@@ -495,7 +495,7 @@
                 document.getElementById(id).style.visibility = "hidden";
         }
 </script>
-        <div style="width:60%;   float:left;  margin-left:85px;"> 
+        <div class="wrapper_nave"> 
 
         
             <div id="flecha1" class="flc1" onmouseover="document.getElementById('cohete1').style.display = 'block';" onmouseout="document.getElementById('cohete1').style.display = 'none';"><img src="assets/media/philoshopy/high_impact.png"></div>
