--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
             <div class="menu-background"></div>
 
-            <div id="template-logo" class="template-logo" data-href="#portfolio.html"></div> 
+            <div id="template-logo" class="template-logo" data-href="#landing.html"></div> 
 
             <div id="template-menu" class="template-menu" data-current-module-type="full_width_gallery" data-side="none" data-href="#portfolio.html"><!-- start #template-menu -->
 
