--- a/html/our_projects/projects.html
+++ b/html/our_projects/projects.html
@@ -532,7 +532,7 @@
 
                                <a href="#activia.html" ><div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/activia.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/activia.jpg" class="opacity_0" width="120%" style="margin-left:-9px;"  onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -558,7 +558,7 @@
 
                               <a href="#danone.html">  <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/danone.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/danone.jpg" class="opacity_0" width="120%" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -584,7 +584,7 @@
 
                                <a href="#kinde_delice.html"> <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/kinder_delice.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/kinder_delice.jpg" class="opacity_0" width="120%" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -610,7 +610,7 @@
 
                                 <div class="third-thumb-image2">
 
-                                  <img src="assets/media/our_projects/projects/bonafont.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                  <img src="assets/media/our_projects/projects/bonafont.jpg" class="opacity_0" width="120%" onload="animateThumb(this)" alt=""  />
 
                                    <a href="#bonafont.html"> <div id="thumb-image-hover" class="hover-default">
 
@@ -636,7 +636,7 @@
 
                                 <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/none.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/none.jpg" class="opacity_0" style="margin-left:-55px;" width="120%" onload="animateThumb(this)" alt=""  />
 
                                    <div id="thumb-image-hover" class="hover-default">
 
@@ -662,7 +662,7 @@
 
                                <a href="#gigante.html"> <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/gigante.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/gigante.jpg" class="opacity_0" width="125%" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -688,7 +688,7 @@
 
                               <a href="#flora.html">  <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/flora.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/flora.jpg" class="opacity_0" style="margin-left:-25px;" width="115%" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -714,7 +714,7 @@
 
                                 <a href="#kinder_chocolate.html"><div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/kinder_chocolate.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/kinder_chocolate.jpg" class="opacity_0" style="margin-left:-25px;" width="120%" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -740,7 +740,7 @@
 
                                 <a href="#nutella.html"><div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/nutella.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/nutella.jpg" class="opacity_0" style="margin-left:-45px;" width="120%" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -766,7 +766,7 @@
 
                                 <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/none2.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/none2.jpg" class="opacity_0" width="120%" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -791,7 +791,7 @@
 
                                 <a href="#evian.html"><div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/evian.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/evian.jpg" class="opacity_0" width="120%" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -816,7 +816,7 @@
 
                                <a href="#nestle.html"> <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/nestle.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/nestle.jpg" class="opacity_0" style="margin-left:-63px;" width="120%" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -841,7 +841,7 @@
 
                                <a href="#danette.html"> <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/danett.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/danett.jpg" class="opacity_0" width="120%" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -866,7 +866,7 @@
 
                                <a href="#badoi.html"> <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/badoit.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/badoit.jpg" class="opacity_0" style="margin-left:-40px;" width="120%" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -891,7 +891,7 @@
 
                                <a href="#kimberly.html"> <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/kimberly-clark.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/kimberly-clark.jpg" class="opacity_0" style="margin-left:-60px;"  width="119%" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -966,7 +966,7 @@
 
                               <a href="#finlandia.html">  <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/finlandia.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/finlandia.jpg" class="opacity_0" style="margin-left:-45px;" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -1017,7 +1017,7 @@
 
                                 <a href="#jimador.html"><div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/jimador.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/jimador.jpg" class="opacity_0" style="margin-left:-48px;" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -1068,7 +1068,7 @@
 
                                 <a href="#new_mix.html"><div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/jimador_newmix.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/jimador_newmix.jpg" class="opacity_0" style="margin-left:-40px;" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -1093,7 +1093,7 @@
 
                                <a href="#jack_daniels.html"> <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/jack_daniels.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/jack_daniels.jpg" width="120%" class="opacity_0" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -1118,7 +1118,7 @@
 
                                <a href="#herradura.html"> <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/herradura.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/herradura.jpg" style="margin-left:-40px;" class="opacity_0" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -1197,7 +1197,7 @@
 
                                <a href="#mtv.html"> <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/mtv.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/mtv.jpg" class="opacity_0" style="margin-left:-40px;"  onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -1249,7 +1249,7 @@
 
                                <a href="#microsoft.html"> <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/microsoft.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/microsoft.jpg" widht="112%"  style="margin-left:-40px;" class="opacity_0" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
@@ -1484,7 +1484,7 @@
 
                                <a href="#yoquiero.html"> <div class="third-thumb-image2">
 
-                                    <img src="assets/media/our_projects/projects/yoquiero.jpg" class="opacity_0" onload="animateThumb(this)" alt=""  />
+                                    <img src="assets/media/our_projects/projects/yoquiero.jpg" style="margin-left:-40px;" class="opacity_0" onload="animateThumb(this)" alt=""  />
 
                                     <div id="thumb-image-hover" class="hover-default">
 
